agent解决类加载导致的热部署失效问题